apps/plain/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: examiner
  namespace: plain
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: examiner
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: examiner
      labels:
        app.kubernetes.io/name: examiner
    spec:
      automountServiceAccountToken: false
      containers:
      - envFrom:
        - configMapRef:
            name: examiner
        image: quay.io/heubeck/examiner:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /.well-known/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: examiner
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /.well-known/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
      restartPolicy: Always
      serviceAccountName: examiner
