apps/plain/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: examiner
  namespace: plain
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: examiner
