apps/plain/route.yaml
# Only needed if there's no Canary
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: examiner
  namespace: plain
spec:
  parentRefs:
  - name: http-gateway
    namespace: default
  rules:
  - backendRefs:
    - name: examiner
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /examine-plain
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replacePrefixMatch: /examine
          type: ReplacePrefixMatch
